fix: overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -63,10 +63,9 @@ body {
 
 main {
     height: 100vh;
-    width: 100vw;
-    overflow: auto;
-    scroll-snap-type: block mandatory;
-
+    overflow-x: hidden;
+    overflow-y: auto;
+    scroll-snap-type: y mandatory;
 }
 
 
@@ -132,6 +131,9 @@ main {
 
 .arrows {	
     display: none;
+}
+section {
+    width: 100vw;
 }
 
 .event {
